[tool.poetry]
name = "anechoic-utils"
version = "0.1.0"
description = ""
authors = ["konstantgr <konstantin.grotov@gmail.com>"]
readme = "README.md"
packages = [{include = "anechoic_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
rsinstrument = "^1.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
